--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -68,12 +68,12 @@
                 Copyright &copy; {{ 'now'|date('Y') }} - Matthieu Napoli
             </p>
             <p>
-                Related and unrelated sites, whatever:
+                Other projects:
                 <a href="https://null.tc/" title="PHP consulting company">null</a>,
                 <a href="https://externals.io/" title="PHP internals mailing list">externals.io</a>,
-                <a href="http://php-di.org/" title="PHP dependency injection container">PHP-DI</a>,
                 <a href="https://prettyci.com/" title="PHP coding standard continuous integration">PrettyCI</a>,
-                <a href="https://serverless-php.news/" title="Newsletter on serverless news for PHP">Serverless PHP news</a>
+                <a href="https://serverless-php.news/" title="Newsletter on serverless news for PHP">Serverless PHP news</a>,
+                <a href="https://training.bref.sh/" title="Workshop to learn how to deploy serverless PHP applications">Serverless PHP training</a>
             </p>
         </div>
     </footer>
