--- a/templates/projects.html.twig
+++ b/templates/projects.html.twig
@@ -36,7 +36,7 @@
             <div class="icon"><i class="fas fa-box-open"></i></div>
             <div class="content">
                 <h2>Bref</h2>
-                <p><a href="https://github.com/mnapoli/bref" title="Serverless PHP framework">Bref</a> is a PHP framework for building serverless PHP applications on AWS Lambda.</p>
+                <p><a href="https://bref.sh/" title="Serverless PHP framework">Bref</a> is a PHP framework for building serverless PHP applications on AWS Lambda.</p>
                 <p>Read <a href="/serverless-php/" title="Serverless and PHP">the article about how it works</a> if you want to learn more.</p>
                 <a class="github-button" href="https://github.com/mnapoli/bref" data-icon="octicon-star" data-show-count="true" aria-label="Bref on GitHub">Bref</a>
             </div>
