--- a/templates/talks.html.twig
+++ b/templates/talks.html.twig
@@ -12,7 +12,7 @@
 
     <section class="talk">
         <h2>Serverless PHP</h2>
-        <p>An introduction to serverless and how to deploy PHP applications on FaaS providers using <a href="https://github.com/mnapoli/bref">Bref</a>. Read more about this topic in the <a href="/serverless-php/">Serverless & PHP article</a>.</p>
+        <p>An introduction to serverless and how to deploy PHP applications on FaaS providers using <a href="https://github.com/bref/bref">Bref</a>. Read more about this topic in the <a href="/serverless-php/">Serverless & PHP article</a>.</p>
         <div class="row">
             <div class="col-md-8">
                 <iframe style="width: 100%; min-height: 250px" src="https://www.youtube.com/embed/4xdFQfOJgYI" frameborder="0" allowfullscreen></iframe>
@@ -43,7 +43,7 @@
                 <p><a href="https://milan.serverlessdays.io/">ServerlessDays Milan</a></p>
             </div>
         </div>
-        <p>🇫🇷 Une introduction à serverless et comment déployer des applications PHP sur des hébergements FaaS en utilisant <a href="https://github.com/mnapoli/bref">Bref</a>.</p>
+        <p>🇫🇷 Une introduction à serverless et comment déployer des applications PHP sur des hébergements FaaS en utilisant <a href="https://github.com/bref/bref">Bref</a>.</p>
         <div class="row">
             <div class="col-md-8">
                 <iframe style="width: 100%; min-height: 250px" src="https://www.youtube.com/embed/nSLwPohkTmI" frameborder="0" allowfullscreen></iframe>
