Add links to the Bref workshop: https://training.bref.sh/

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -27,6 +27,8 @@ $link-decoration: underline var(--color-light);
 @import "~bootstrap/scss/grid";
 @import "~bootstrap/scss/utilities";
 @import "~bootstrap/scss/navbar";
+@import "~bootstrap/scss/alert";
+@import "~bootstrap/scss/buttons";
 
 // Font awesome
 @import "~@fortawesome/fontawesome-free/css/all";
