--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -73,7 +73,7 @@
                 <a href="https://externals.io/" title="PHP internals mailing list">externals.io</a>,
                 <a href="https://prettyci.com/" title="PHP coding standard continuous integration">PrettyCI</a>,
                 <a href="https://serverless-php.news/" title="Newsletter on serverless news for PHP">Serverless PHP news</a>,
-                <a href="https://training.bref.sh/" title="Workshop to learn how to deploy serverless PHP applications">Serverless PHP training</a>
+                <a href="https://training.bref.sh/?utm_source=mnapoli.fr&utm_medium=footer&utm_campaign=workshop" title="Workshop to learn how to deploy serverless PHP applications">Serverless PHP training</a>
             </p>
         </div>
     </footer>
