--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -42,6 +42,9 @@
 
     <h2 id="#upcoming">Upcoming</h2>
     <hr>
+
+    {% include 'workshop.html.twig' %}
+
     <ul>
         <li>
             <span class="float-right text-muted small">October - Paris</span>
@@ -56,7 +59,7 @@
             <em>Serverless PHP applications with Bref</em>, <a href="https://php.barcelona/">PHP Barcelona</a>
         </li>
         <li>
-            <span class="float-right text-muted small">November - Europe</span>
+            <span class="float-right text-muted small">November - UK</span>
             <em>Serverless PHP applications with Bref</em>, <a href="https://conference.scotlandphp.co.uk/">ScotlandPHP</a>
         </li>
     </ul>
