--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -70,6 +70,7 @@
             <p>
                 Other projects:
                 <a href="https://null.tc/" title="PHP consulting company">null</a>,
+                <a href="https://getsupercharge.com/" title="Laravel image resizing CDN">Supercharge</a>,
                 <a href="https://externals.io/" title="PHP internals mailing list">externals.io</a>,
                 <a href="https://prettyci.com/" title="PHP coding standard continuous integration">PrettyCI</a>,
                 <a href="https://serverless-php.news/" title="Newsletter on serverless news for PHP">Serverless PHP news</a>,
