--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -44,20 +44,16 @@
     <hr>
     <ul>
         <li>
-            <span class="float-right text-muted small">October - Paris</span>
-            <em>L'Architecture Progressive</em>, <a href="https://event.afup.org/">ForumPHP</a>
-        </li>
-        <li>
-            <span class="float-right text-muted small">October - Lyon</span>
-            <em>Serverless Laravel</em>, <a href="https://www.meetup.com/fr-FR/Meetup-Laravel-Lyon/events/264717028/">Laravel Lyon meetup</a>
-        </li>
-        <li>
             <span class="float-right text-muted small">November - Barcelona</span>
             <em>Serverless PHP applications with Bref</em>, <a href="https://php.barcelona/">PHP Barcelona</a>
         </li>
         <li>
             <span class="float-right text-muted small">November - UK</span>
             <em>Serverless PHP applications with Bref</em>, <a href="https://conference.scotlandphp.co.uk/">ScotlandPHP</a>
+        </li>
+        <li>
+            <span class="float-right text-muted small">December - Online</span>
+            <em>Building serverless APIs with Bref</em>, <a href="https://daycamp4developers.com/">Day Camp 4 Developers</a>
         </li>
     </ul>
 
