Add CraftCMS sponsor

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -59,6 +59,13 @@
 
     <p><a href="/presentations/">View past talks</a></p>
 
+    <h2 id="#sponsors">Sponsors</h2>
+    <hr>
+    <p>These companies <a href="https://github.com/sponsors/mnapoli">sponsor my work</a> on open source projects:</p>
+    <p class="text-center">
+        <a href="https://craftcms.com/" title="Craft CMS"><img src="/images/logo-craft-cms.png" alt="Craft CMS" style="height: 30px"></a>
+    </p>
+
     <h2>Blog</h2>
     <hr>
     {% for article in articles %}
