--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -30,12 +30,12 @@
 
         <div id="intro-en" class="{{ language == 'fr' ? 'd-none' : '' }}">
             <p>Hi, I am a <strong>software consultant</strong> working on topics such as serverless and PHP. I have been working with PHP and JavaScript as <a href="https://www.linkedin.com/in/matthieunapoli/?locale=en_US">fullstack developer, lead dev and CTO</a>. I work with editors and startups to build SaaS products, e-commerce websites, marketplaces…</p>
-            <p><a href="mailto:matthieu@mnapoli.fr">You can hire me</a> to work on <strong>serverless infrastructure</strong>, <strong>PHP/Symfony</strong> project architecture or as <strong>CTO on-demand</strong> to get a project started in the right direction.</p>
+            <p><a href="https://null.tc/">We can work together</a> on <strong>serverless infrastructure</strong>, project architecture or as <strong>CTO on-demand</strong> to get a project started in the right direction.</p>
             <p>I like to share via <a href="/presentations/">conference talks and workshops</a>, this blog and <a href="/projects/">open source projects</a>.</p>
         </div>
         <div id="intro-fr" lang="fr" class="{{ language == 'en' ? 'd-none' : '' }}">
             <p><strong>Consultant technique</strong> spécialisé dans le web, je travaille avec PHP et JavaScript depuis 10 ans. Tour à tour <a href="https://www.linkedin.com/in/matthieunapoli">développeur fullstack, lead dev et CTO</a>, je travaille avec des éditeurs et startups sur des produits <abbr title="Software as a Service">SaaS</abbr>, sites e-commerce, marketplaces…</p>
-            <p><a href="mailto:matthieu@mnapoli.fr">Je peux travailler avec vous</a> sur des <strong>infrastructures serverless</strong>, de l'architecture de projets <strong>PHP/Symfony</strong> ou en tant que <strong>CTO on-demand</strong> auprès de projets et d'équipes qui se forment.</p>
+            <p><a href="https://null.tc/">Je peux travailler avec vous</a> sur des <strong>infrastructures serverless</strong>, de l'architecture de projets <strong>PHP/Symfony</strong> ou en tant que <strong>CTO on-demand</strong> auprès de projets et d'équipes qui se forment.</p>
             <p>J'aime partager via <a href="/presentations/">des conférences et workshops</a>, ce blog et des <a href="/projects/">projets open source</a>.</p>
         </div>
     </header>
