--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -44,16 +44,12 @@
     <hr>
     <ul>
         <li>
-            <span class="float-right text-muted small">November - Barcelona</span>
-            <em>Serverless PHP applications with Bref</em>, <a href="https://php.barcelona/">PHP Barcelona</a>
+            <span class="float-right text-muted small">February - London</span>
+            <em>Serverless PHP applications with Bref</em>, <a href="https://www.phpconference.co.uk/">PHP UK Conference</a>
         </li>
         <li>
-            <span class="float-right text-muted small">November - UK</span>
-            <em>Serverless PHP applications with Bref</em>, <a href="https://conference.scotlandphp.co.uk/">ScotlandPHP</a>
-        </li>
-        <li>
-            <span class="float-right text-muted small">December - Online</span>
-            <em>Building serverless APIs with Bref</em>, <a href="https://daycamp4developers.com/">Day Camp 4 Developers</a>
+            <span class="float-right text-muted small">June - Amsterdam</span>
+            <em>Serverless PHP</em>, workshop + talk, <a href="https://www.phpconference.nl/">Dutch PHP Conference</a>
         </li>
     </ul>
 
@@ -63,7 +59,8 @@
     <hr>
     <p>These companies <a href="https://github.com/sponsors/mnapoli">sponsor my work</a> on open source projects:</p>
     <p class="text-center">
-        <a href="https://craftcms.com/" title="Craft CMS"><img src="/images/logo-craft-cms.png" alt="Craft CMS" style="height: 30px"></a>
+        <a href="https://craftcms.com/" title="Craft CMS"><img src="/images/logo-craft-cms.png" alt="Craft CMS" style="height: 35px"></a>
+        <a href="https://www.jetbrains.com/" title="JetBrains"><img src="/images/logo-jetbrains.svg" alt="JetBrains" style="height: 80px; margin-left: 20px"></a>
     </p>
 
     <h2>Blog</h2>
