--- a/templates/talks.html.twig
+++ b/templates/talks.html.twig
@@ -18,10 +18,10 @@
                 <iframe style="width: 100%; min-height: 250px" src="https://www.youtube.com/embed/F_AVGKdlXpI" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="col">
-                <p>Given at <a href="https://php.barcelona/">PHP Barcelona 2019</a>, <a href="https://2019.phpday.it/">phpDay 2019</a>, <a href="https://2019.phpsrbija.rs/">PHP Serbia 2019</a>, <a href="https://www.cascadiaphp.com/">CascadiaPHP 2018</a> and <a href="https://2018.phpce.eu/en/">phpCE Prague 2018</a>.</p>
+                <p>Given at <a href="https://www.phpconference.co.uk/">PHP UK 2020</a>, <a href="https://php.barcelona/">PHP Barcelona 2019</a>, <a href="https://2019.phpday.it/">phpDay 2019</a>, <a href="https://2019.phpsrbija.rs/">PHP Serbia 2019</a>, <a href="https://www.cascadiaphp.com/">CascadiaPHP 2018</a> and <a href="https://2018.phpce.eu/en/">phpCE Prague 2018</a>.</p>
                 <ul>
-                    <li><a href="/presentations/serverless-php/serverless-php-2019.pdf" title="See the slides">Slides</a></li>
-                    <li><a href="https://joind.in/event/scotlandphp-2019/serverless-php-applications-with-bref">Joind.in ScotlandPHP</a></li>
+                    <li><a href="/presentations/serverless-php/serverless-php-2020.pdf" title="See the slides">Slides</a></li>
+                    <li><a href="https://joind.in/event/php-uk-2020/serverless-php-applications-with-bref">Joind.in</a></li>
                 </ul>
             </div>
         </div>
