--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,8 +6,8 @@
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    {% set metaTitle = metaTitle|default('Matthieu Napoli | Software consultant expert with PHP and Symfony') %}
-    {% set metaDescription = metaDescription|default('Matthieu is a software consultant working on PHP and Symfony projects, based in Lyon, France.') %}
+    {% set metaTitle = metaTitle|default('Matthieu Napoli | Serverless and PHP software consultant') %}
+    {% set metaDescription = metaDescription|default('Matthieu is a software consultant working on serverless PHP applications.') %}
     <title>{{ metaTitle }}</title>
     <meta name="description" content="{{ metaDescription|e('html_attr') }}" />
     <meta property="og:title" content="{{ metaTitle|e('html_attr') }}" />
