--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -29,7 +29,7 @@
         </script>
 
         <div id="intro-en" class="{{ language == 'fr' ? 'd-none' : '' }}">
-            <p>Hi, I am a <strong>software consultant</strong> working on topics such as serverless and PHP. I have been working with PHP and JavaScript as <a href="https://www.linkedin.com/in/matthieunapoli/?locale=en_US">fullstack developer, lead dev and CTO</a>. I work with editors and startups to build SaaS products, e-commerce websites, marketplaces…</p>
+            <p>Hi, I am a <strong>software consultant</strong> and founder of <a href="https://null.tc/" title="Serverless PHP consulting company">null</a>. I have been working for 10 years with PHP and JavaScript as <a href="https://www.linkedin.com/in/matthieunapoli/?locale=en_US">fullstack developer, lead dev, CTO</a>, while maintaining several <a href="{{ path('projects') }}">open source projects</a>.</p>
             <p><a href="https://null.tc/">We can work together</a> on <strong>serverless infrastructure</strong>, project architecture or as <strong>CTO on-demand</strong> to get a project started in the right direction.</p>
         </div>
         <div id="intro-fr" lang="fr" class="{{ language == 'en' ? 'd-none' : '' }}">
@@ -58,7 +58,8 @@
     <p>These companies <a href="https://github.com/sponsors/mnapoli">sponsor my work</a> on open source projects:</p>
     <p class="text-center">
         <a href="https://craftcms.com/" title="Craft CMS"><img src="/images/logo-craft-cms.png" alt="Craft CMS" style="height: 35px"></a>
-        <a href="https://www.jetbrains.com/" title="JetBrains"><img src="/images/logo-jetbrains.svg" alt="JetBrains" style="height: 80px; margin-left: 20px"></a>
+        <a href="https://geckoengage.com" title="GeckoEngage"><img src="/images/logo-gecko-engage.png" alt="GeckoEngage" style="height: 30px; margin-left: 30px"></a>
+        <a href="https://www.jetbrains.com/" title="JetBrains"><img src="/images/logo-jetbrains.svg" alt="JetBrains" style="height: 80px; margin-left: 30px"></a>
     </p>
 
     <h2>Blog</h2>
