--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -57,9 +57,18 @@
     <hr>
     <p>These companies <a href="https://github.com/sponsors/mnapoli">sponsor my work</a> on open source projects:</p>
     <p class="text-center">
-        <a href="https://craftcms.com/" title="Craft CMS"><img src="/images/logo-craft-cms.png" alt="Craft CMS" style="height: 35px"></a>
-        <a href="https://geckoengage.com" title="GeckoEngage"><img src="/images/logo-gecko-engage.png" alt="GeckoEngage" style="height: 30px; margin-left: 30px"></a>
-        <a href="https://www.jetbrains.com/" title="JetBrains"><img src="/images/logo-jetbrains.svg" alt="JetBrains" style="height: 80px; margin-left: 30px"></a>
+        <a href="https://craftcms.com/" title="Craft CMS">
+            <img src="/images/logo-craft-cms.png" alt="Craft CMS" style="height: 35px"></a>
+        <a href="https://geckoengage.com" title="GeckoEngage">
+            <img src="/images/logo-gecko-engage.png" alt="GeckoEngage" style="height: 30px; margin-left: 30px"></a>
+        <a href="https://www.jetbrains.com/" title="JetBrains">
+            <img src="/images/logo-jetbrains.svg" alt="JetBrains - Creator of PhpStorm" style="height: 80px; margin-left: 30px"></a>
+    </p>
+    <p class="text-center">
+        <a class="block self-center mx-6 mb-6" href="https://www.amezmo.com/" title="Amezmo - Cloud hosting and deployment for PHP">
+            <img src="/images/logo-amezmo.svg" alt="Amezmo" style="width: 70px; margin-top: 5px"></a>
+        <a class="block self-center mx-6 mb-6" href="https://www.web-id.fr/" title="Web-ID - Laravel web agency">
+            <img src="/images/logo-web-id.png" alt="Web-ID" style="height: 35px; margin-left: 30px"></a>
     </p>
 
     <h2>Blog</h2>
