--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -60,9 +60,11 @@
         <a href="https://craftcms.com/" title="Craft CMS">
             <img src="/images/logo-craft-cms.png" alt="Craft CMS" style="height: 35px"></a>
         <a href="https://geckoengage.com" title="GeckoEngage">
-            <img src="/images/logo-gecko-engage.png" alt="GeckoEngage" style="height: 30px; margin-left: 30px"></a>
+            <img src="/images/logo-gecko-engage.png" alt="GeckoEngage" style="height: 25px; margin-left: 30px"></a>
         <a href="https://www.jetbrains.com/" title="JetBrains">
             <img src="/images/logo-jetbrains.svg" alt="JetBrains - Creator of PhpStorm" style="height: 80px; margin-left: 30px"></a>
+        <a href="https://www.twilio.com/" title="Twilio">
+            <img src="/images/logo-twilio.svg" alt="Twilio" style="height: 30px; margin-left: 30px"></a>
     </p>
     <p class="text-center">
         <a class="block self-center mx-6 mb-6" href="https://www.amezmo.com/" title="Amezmo - Cloud hosting and deployment for PHP">
