--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -42,12 +42,8 @@
     <hr>
     <ul>
         <li>
-            <span class="float-right text-muted small">February - London</span>
-            <em>Serverless PHP applications with Bref</em>, <a href="https://www.phpconference.co.uk/">PHP UK Conference</a>
-        </li>
-        <li>
             <span class="float-right text-muted small">June - Amsterdam</span>
-            <em>Serverless PHP</em>, workshop + talk, <a href="https://www.phpconference.nl/">Dutch PHP Conference</a>
+            <em>Serverless PHP applications</em>, talk, <a href="https://www.phpconference.nl/">Dutch PHP Conference</a>
         </li>
     </ul>
 
