--- a/templates/talks.html.twig
+++ b/templates/talks.html.twig
@@ -15,7 +15,7 @@
         <p>An introduction to serverless and how to deploy PHP applications on FaaS providers using <a href="https://bref.sh/">Bref</a>. Read more about this topic in the <a href="/serverless-php/">Serverless & PHP article</a>.</p>
         <div class="row">
             <div class="col-md-8">
-                <iframe style="width: 100%; min-height: 250px" src="https://www.youtube.com/embed/F_AVGKdlXpI" frameborder="0" allowfullscreen></iframe>
+                <iframe style="width: 100%; min-height: 250px" src="https://www.youtube.com/embed/R2V4QTM2aes" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="col">
                 <p>Given at <a href="https://www.phpconference.co.uk/">PHP UK 2020</a>, <a href="https://php.barcelona/">PHP Barcelona 2019</a>, <a href="https://2019.phpday.it/">phpDay 2019</a>, <a href="https://2019.phpsrbija.rs/">PHP Serbia 2019</a>, <a href="https://www.cascadiaphp.com/">CascadiaPHP 2018</a> and <a href="https://2018.phpce.eu/en/">phpCE Prague 2018</a>.</p>
