Add link in footer

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -73,7 +73,8 @@
                 <a href="https://bref.sh/" title="Serverless PHP on AWS Lambda">Bref</a>,
                 <a href="https://externals.io/" title="PHP internals mailing list">externals.io</a>,
                 <a href="https://serverless-php.news/" title="Newsletter on serverless news for PHP">Serverless PHP news</a>,
-                <a href="https://training.bref.sh/?utm_source=mnapoli.fr&utm_medium=footer&utm_campaign=workshop" title="Workshop to learn how to deploy serverless PHP applications">Serverless PHP training</a>
+                <a href="https://training.bref.sh/?utm_source=mnapoli.fr&utm_medium=footer&utm_campaign=workshop" title="Workshop to learn how to deploy serverless PHP applications">Serverless PHP training</a>,
+                <a href="https://serverless-visually-explained.com/?utm_source=mnapoli.fr&utm_medium=footer&utm_campaign=course" title="Learn serverless with visual animations and code examples">Serverless visual course</a>
             </p>
         </div>
     </footer>
