--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -42,8 +42,16 @@
     <hr>
     <ul>
         <li>
-            <span class="float-right text-muted small">June - Amsterdam</span>
+            <span class="float-right text-muted small">June - Online</span>
             <em>Serverless PHP applications</em>, talk, <a href="https://www.phpconference.nl/">Dutch PHP Conference</a>
+        </li>
+        <li>
+            <span class="float-right text-muted small">June - Online</span>
+            <em>Serverless PHP using Bref</em>, <a href="https://www.serverlesschats.com/55/">Serverless Chats podcast</a>
+        </li>
+        <li>
+            <span class="float-right text-muted small">July - Online</span>
+            <em>Serverless Laravel</em>, talk, <a href="https://laravelconf.tw/">Laravel Conf Taiwan</a>
         </li>
     </ul>
 
