--- a/templates/talks.html.twig
+++ b/templates/talks.html.twig
@@ -25,6 +25,15 @@
                 </ul>
             </div>
         </div>
+        <p>Serverless Chats, Episode #55: Serverless PHP using Bref</p>
+        <div class="row">
+            <div class="col-md-8">
+                <iframe style="width: 100%; min-height: 250px" src="https://www.youtube.com/embed/H8tkZcjQxOA" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="col">
+                <p><a href="https://www.serverlesschats.com/55/">Serverless Chats</a></p>
+            </div>
+        </div>
         <p>A journey toward serverless on a ship called PHP</p>
         <div class="row">
             <div class="col-md-8">
