--- a/templates/projects.html.twig
+++ b/templates/projects.html.twig
@@ -13,10 +13,10 @@
     <div class="project">
         <div class="icon"><i class="fas fa-laptop"></i></div>
         <div class="content">
-            <h2>PrettyCI</h2>
-            <p><a href="https://prettyci.com">PrettyCI</a> is <strong>a SaaS that provides continuous integration for PHP coding standards</strong>. It runs PHP CodeSniffer and PHP-CS-Fixer on every commit pushed to a GitHub repository.</p>
-            <p>The project is built using Laravel, <a href="https://spark.laravel.com/">Spark</a>, Stripe and AWS Lambda.</p>
-            <a href="https://prettyci.com" title="Continuous integration for PHP coding standards"><img class="img-thumbnail" src="/images/projects/prettyci.png" alt="PrettyCI - CI as a service for PHP coding style"></a>
+            <h2>Serverless Visually Explained</h2>
+            <p><a href="https://serverless-visually-explained.com/">Serverless Visually Explained</a> is <strong>an online course</strong> teaching developers <strong>about serverless</strong>.</p>
+            <p>I packed this course with concrete use cases and examples on how to create robust and scalable applications using serverless on AWS.</p>
+            <a href="https://serverless-visually-explained.com/" title="Online course to learn how to create serverless applications"><img class="img-thumbnail" src="/images/projects/serverless-visually-explained.png" alt="Serverless visual course"></a>
         </div>
     </div>
 
