--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -62,7 +62,7 @@
     <p>These companies <a href="https://github.com/sponsors/mnapoli">sponsor my work</a> on open source projects:</p>
     <p class="text-center">
         <a href="https://geckoengage.com" title="GeckoEngage">
-            <img src="/images/logo-gecko-engage.png" alt="GeckoEngage" style="height: 25px; margin-left: 30px"></a>
+            <img src="/images/logo-gecko-engage.png" alt="GeckoEngage" style="height: 25px"></a>
         <a href="https://www.jetbrains.com/" title="JetBrains">
             <img src="/images/logo-jetbrains.svg" alt="JetBrains - Creator of PhpStorm" style="height: 80px; margin-left: 30px"></a>
         <a href="https://laravel.com/" title="Laravel">
