--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -73,10 +73,14 @@
             <img src="/images/logo-twilio.svg" alt="Twilio" style="height: 30px; margin-left: 20px"></a>
     </p>
     <p class="text-center">
-        <a class="block self-center mx-6 mb-6" href="https://www.amezmo.com/" title="Amezmo - Cloud hosting and deployment for PHP">
-            <img src="/images/logo-amezmo.svg" alt="Amezmo" style="width: 70px; margin-top: 5px"></a>
-        <a class="block self-center mx-6 mb-6" href="https://www.web-id.fr/" title="Web-ID - Laravel web agency">
-            <img src="/images/logo-web-id.png" alt="Web-ID" style="height: 35px; margin-left: 30px"></a>
+        <a class="block self-center" href="https://www.amezmo.com/" title="Amezmo - Cloud hosting and deployment for PHP">
+            <img src="/images/logo-amezmo.svg" alt="Amezmo" style="width: 70px; margin-top: 5px; margin-right: 10px; margin-bottom: 10px"></a>
+        <a class="block self-center" href="https://www.web-id.fr/" title="Web-ID - Laravel web agency">
+            <img src="/images/logo-web-id.png" alt="Web-ID" style="height: 35px; margin-right: 10px; margin-bottom: 10px"></a>
+        <a class="block self-center" href="https://ecomail.cz/" title="Ecomail.cz">
+            <img src="/images/logo-ecomail.png" alt="Ecomail.cz" style="width: 80px; margin-right: 10px; margin-bottom: 10px"></a>
+        <a class="block self-center" href="https://akaunting.com/" title="Akaunting - Free Accounting Software">
+            <img src="/images/logo-akaunting.svg" alt="Akaunting" style="width: 90px; margin-right: 10px; margin-bottom: 10px"></a>
     </p>
 
     <h2>Blog</h2>
