--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -40,24 +40,24 @@
 
     {% include 'course.html.twig' %}
 
-    <h2 id="#upcoming">Upcoming</h2>
-    <hr>
-    <ul>
-        <li>
-            <span class="float-right text-muted small">June - Online</span>
-            <em>Serverless PHP applications</em>, talk, <a href="https://www.phpconference.nl/">Dutch PHP Conference</a>
-        </li>
-        <li>
-            <span class="float-right text-muted small">June - Online</span>
-            <em>Serverless PHP using Bref</em>, <a href="https://www.serverlesschats.com/55/">Serverless Chats podcast</a>
-        </li>
-        <li>
-            <span class="float-right text-muted small">July - Online</span>
-            <em>Serverless Laravel</em>, talk, <a href="https://laravelconf.tw/">Laravel Conf Taiwan</a>
-        </li>
-    </ul>
+{#    <h2 id="#upcoming">Upcoming</h2>#}
+{#    <hr>#}
+{#    <ul>#}
+{#        <li>#}
+{#            <span class="float-right text-muted small">June - Online</span>#}
+{#            <em>Serverless PHP applications</em>, talk, <a href="https://www.phpconference.nl/">Dutch PHP Conference</a>#}
+{#        </li>#}
+{#        <li>#}
+{#            <span class="float-right text-muted small">June - Online</span>#}
+{#            <em>Serverless PHP using Bref</em>, <a href="https://www.serverlesschats.com/55/">Serverless Chats podcast</a>#}
+{#        </li>#}
+{#        <li>#}
+{#            <span class="float-right text-muted small">July - Online</span>#}
+{#            <em>Serverless Laravel</em>, talk, <a href="https://laravelconf.tw/">Laravel Conf Taiwan</a>#}
+{#        </li>#}
+{#    </ul>#}
 
-    <p><a href="/presentations/">View past talks</a></p>
+{#    <p><a href="/presentations/">View past talks</a></p>#}
 
     <h2 id="#sponsors">Sponsors</h2>
     <hr>
