--- a/templates/blog/article.html.twig
+++ b/templates/blog/article.html.twig
@@ -43,5 +43,6 @@
     {{ parent() }}
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/styles/github-gist.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/yaml.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 {% endblock %}
