Add 7777 to the projects

--- a/templates/projects.html.twig
+++ b/templates/projects.html.twig
@@ -14,9 +14,20 @@
         <div class="icon"><i class="fas fa-laptop"></i></div>
         <div class="content">
             <h2>Serverless Visually Explained</h2>
-            <p><a href="https://serverless-visually-explained.com/">Serverless Visually Explained</a> is <strong>an online course</strong> teaching developers <strong>about serverless</strong>.</p>
+            <p><a href="https://serverless-visually-explained.com/?utm_source=mnapoli.fr&utm_medium=projects&utm_campaign=course">Serverless Visually Explained</a> is <strong>an online course</strong> teaching developers <strong>about serverless</strong>.</p>
             <p>I packed this course with concrete use cases and examples on how to create robust and scalable applications using serverless on AWS.</p>
-            <a href="https://serverless-visually-explained.com/" title="Online course to learn how to create serverless applications"><img class="img-thumbnail" src="/images/projects/serverless-visually-explained.png" alt="Serverless visual course"></a>
+            <a href="https://serverless-visually-explained.com/?utm_source=mnapoli.fr&utm_medium=projects&utm_campaign=course" title="Online course to learn how to create serverless applications"><img class="img-thumbnail" src="/images/projects/serverless-visually-explained.png" alt="Serverless visual course"></a>
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="project">
+        <div class="icon"><i class="fas fa-box-open"></i></div>
+        <div class="content">
+            <h2>7777</h2>
+            <p><a href="https://port7777.com/?utm_source=mnapoli.fr&utm_medium=projects&utm_campaign=7777">7777</a> is a CLI tool that simplifies connecting to AWS <strong>RDS databases</strong> from a computer.</p>
+            <a href="https://port7777.com/?utm_source=mnapoli.fr&utm_medium=projects&utm_campaign=7777" title="Connect to RDS databases from your local machine"><img class="img-thumbnail" src="/images/projects/7777.png" alt="7777"></a>
         </div>
     </div>
 
