--- a/templates/projects.html.twig
+++ b/templates/projects.html.twig
@@ -13,6 +13,18 @@
     <div class="project">
         <div class="icon"><i class="fas fa-laptop"></i></div>
         <div class="content">
+            <h2>Lift</h2>
+            <p><a href="https://github.com/getlift/lift?ref=mnapoli.fr">Lift</a> is a plugin that leverages the AWS CDK to expand the <strong>Serverless Framework</strong> beyond functions.</p>
+            <p>Lift helps deploying serverless websites, queues, webhooks and more.</p>
+            <a href="https://github.com/getlift/lift?ref=mnapoli.fr" title="Serverless Lift"><img class="img-thumbnail" src="https://raw.githubusercontent.com/getlift/lift/master/docs/img/animation.gif" alt="Serverless Lift"></a>
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="project">
+        <div class="icon"><i class="fas fa-laptop"></i></div>
+        <div class="content">
             <h2>Serverless Visually Explained</h2>
             <p><a href="https://serverless-visually-explained.com/?utm_source=mnapoli.fr&utm_medium=projects&utm_campaign=course">Serverless Visually Explained</a> is <strong>an online course</strong> teaching developers <strong>about serverless</strong>.</p>
             <p>I packed this course with concrete use cases and examples on how to create robust and scalable applications using serverless on AWS.</p>
