--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -76,6 +76,7 @@
                 <a href="https://training.bref.sh/?utm_source=mnapoli.fr&utm_medium=footer&utm_campaign=workshop" title="Workshop to learn how to deploy serverless PHP applications">Serverless PHP training</a>,
                 <a href="https://serverless-visually-explained.com/?utm_source=mnapoli.fr&utm_medium=footer&utm_campaign=course" title="Learn serverless with visual animations and code examples">Serverless visual course</a>,
                 <a href="https://port7777.com/?utm_source=mnapoli.fr&utm_medium=footer&utm_campaign=7777" title="Connect to AWS RDS databases via SSH tunnels">7777</a>
+                <a href="https://madame-yams.com/?ref=mnapoli.fr" title="Madame Yams - Online multiplayer Yahtzee game">7777</a>
             </p>
         </div>
     </footer>
