--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,4 +5,4 @@
 @tailwind components;
 @tailwind utilities;
 
-@import "~highlight.js/styles/hybrid.css";
+@import "~highlight.js/styles/zenburn.css";
